Adding Test Data Generation table

--- a/panel.html
+++ b/panel.html
@@ -56,6 +56,24 @@
               />
               Testcase
             </label>
+            <label>
+              <input 
+              type="radio" 
+              name="javaGenerationMode" 
+              value="TESTCASE" 
+              id="javaGenModeTest"
+              /> 
+              Manual Test Cases
+            </label>
+            <label>
+              <input 
+              type="radio" 
+              name="javaGenerationMode" 
+              value="TESTDATA" 
+              id="javaGenModeTest"
+              /> 
+              Generate Test Data
+            </label>          
           </div>
         </div>
       </div>
