as per amazon bedrock

--- a/panel.html
+++ b/panel.html
@@ -143,6 +143,7 @@
             <option value="" disabled selected>Choose provider</option>
             <option value="groq">Groq</option>
             <option value="openai">OpenAI</option>
+            <option value="amazonbedrock">Amazonbedrock</option>
           </select>
         </div>
 
@@ -163,6 +164,11 @@
           <input type="password" id="openaiApiKey" class="api-key-input" placeholder="Enter your OpenAI API key">
         </div>
 
+        <div class="api-key-container" id="amazonbedrockKeyContainer" style="display: none;">
+          <label for="amazonbedrockApiKey">Amazon bedrock API Key</label>
+          <input type="password" id="amazonbedrockApiKey" class="api-key-input" placeholder="Enter your Amazon bedrock API key">
+        </div>
+
         
       </div>
     </div>
@@ -174,5 +180,6 @@
   <script src="src/scripts/api/groq-api.js"></script>
   <script src="src/scripts/chat.js" type="module"></script>
   <script src="src/scripts/api/openai-api.js"></script>
+  <script src="src/scripts/api/amazon-bedrock.js"></script>
 </body>
 </html>
