updated as per BedrockAPI stds

--- a/panel.html
+++ b/panel.html
@@ -143,7 +143,7 @@
             <option value="" disabled selected>Choose provider</option>
             <option value="groq">Groq</option>
             <option value="openai">OpenAI</option>
-            <option value="amazonbedrock">Amazonbedrock</option>
+            <option value="bedrock">BedrockAPI</option>
           </select>
         </div>
 
@@ -163,13 +163,7 @@
           <label for="openaiApiKey">OpenAI API Key</label>
           <input type="password" id="openaiApiKey" class="api-key-input" placeholder="Enter your OpenAI API key">
         </div>
-
-        <div class="api-key-container" id="amazonbedrockKeyContainer" style="display: none;">
-          <label for="amazonbedrockApiKey">Amazon bedrock API Key</label>
-          <input type="password" id="amazonbedrockApiKey" class="api-key-input" placeholder="Enter your Amazon bedrock API key">
-        </div>
-
-        
+     
       </div>
     </div>
   </div>
